--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,17 @@
   },
   "homepage": "https://github.com/alexcarol/sidekick-library-generator#readme",
   "dependencies": {
-    "commander": "^13.1.0"
+    "@adobe/helix-importer": "^1.0.0",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "commander": "^13.1.0",
+    "jsdom": "^24.0.0",
+    "mustache": "^4.2.0",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "eslint": "^9.23.0",
+    "eslint-plugin-import": "^2.29.1",
+    "globals": "^14.0.0"
   }
 }
