--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "homepage": "https://github.com/alexcarol/sidekick-library-generator#readme",
   "dependencies": {
-    "@adobe/helix-importer": "^1.0.0",
+    "@adobe/helix-importer": "^3.4.78",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^13.1.0",
     "jsdom": "^24.0.0",
     "mustache": "^4.2.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "eslint": "^9.23.0",
